# cookbook-server/api-docs/api-documentations.yaml
@@ -1522,8 +1522,8 @@ paths:
                   - $ref: "#/components/schemas/recipe"
                   - type: object
                     properties:
-                      updatedPermission:
-                        $ref: "#/components/schemas/recipe/properties/permission"
+                      updatedRecipe:
+                        $ref: "#/components/schemas/recipe"
         204:
           description: Permission of recipe hasn't been updated
         400:
